ProjectAgent/css/mycss.css
/*!
 * Start Bootstrap - SB Admin Bootstrap Admin Template (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 #001452*/


/* Global Styles */

body {
    margin-top: 150px;
    background-color:  #CC6666; /**rgba(0, 48, 82, 0.98);*/
}
/*image wrapper*/
@media(min-width:768px) {

    #image-wrapper {
        padding-left: 15px;
        padding-right: 15px;
        padding-top: 5%;

        background-position:inherit;


    }
}
@media(min-width:768px) {
    body {
        margin-top: 50px;
    }
}

#wrapper {
    padding-left: 0;
}

#page-wrapper {
    width: 100%;
    padding-right: 0;
    background-color: hsl(120,60%,70%);/**#CCCCFF..66CC66;*/
}


@media(min-width:768px) {
    #wrapper {
        margin-top: -7%;
        padding-left: 225px;
        margin-left: 40px;
        margin-right: 40px;
    }

    #page-wrapper {
        padding-left: 10px;
        padding-top: 100px;
        /*background-image:url("../pics/art.jpg");*/
        background-position:inherit;

S
    }
}


.navbar{
    background-color: #33CC99;/*navbar color-------3366FF--------*/
    border-bottom: 2px solid white;
}

/* Top Navigation */

.top-nav {
    padding: 100 15px;
}

.top-nav>li {
    display: inline-block;
    float: left;

}

.top-nav>li>a {
    padding-top: 15px;
    padding-bottom: 15px;
    line-height: 20px;
    margin-right: 10px;
    color: #fff;
}

.top-nav>li>a:hover,
.top-nav>li>a:focus,
.top-nav>.open>a,
.top-nav>.open>a:hover,
.top-nav>.open>a:focus {
    color: #fff;
    background-color: transparent;
}

.top-nav>.open>.dropdown-menu {
    float: left;
    position: absolute;
    margin-top: 0;
    border: 1px solid rgba(0,0,0,.15);
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    background-color: #fff;
    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
    box-shadow: 0 6px 12px rgba(0,0,0,.175);
}

.top-nav>.open>.dropdown-menu>li>a {
    white-space: normal;
}

/* Side Navigation */

@media(min-width:768px) {
    .side-nav {
        position: fixed;
        top: 0px;
        left: 225px;
        width: 225px;
        margin-left: -207px;
        border: none;
        border-radius: 0;
        overflow-y: auto;
        background-color:orange;
        margin-top: 77px;
    }

    .side-nav>li>a {
        width: 225px;
    }

    .side-nav li a:hover,
    .side-nav li a:focus {
        outline: transparent;
        background-color: #3366FF !important;
    }
}

.side-nav>li>ul {
    padding: 0;
}

.side-nav>li>ul>li>a {
    display: block;
    padding: 10px 15px 10px 38px;
    text-decoration: none;
    color: #999;
}

.side-nav>li>ul>li>a:hover {
    color: #fff;
}

/* Flot Chart Containers */

.flot-chart {
    display: block;
    height: 400px;
}

.flot-chart-content {
    width: 100%;
    height: 100%;
}

/* inputs */
input{
    font-size: 14pt;
    border-radius: 3px;
    border: 1px solid transparent;
    background-color: white;    
    margin-left: 0px;
    vertical-align: center;
    width: 95%;
    margin: 5px;
    padding: 5px 7px;
}



button{
    font-size: 20pt;
    border-radius: 5px;
    border: 1px solid white;
    margin: 10px;
    vertical-align: center;
}
#input-sign{
    border: 1px solid black;
    width: 50%;
}
/* project.php*/
#firstbutton{
    margin-top: -50px;
    margin-left:80%;
    width: 100%;
}

/*Create Project*/

#required{

    
    width: 100%;
}
#notRequired{
   
    width: 100%;
        
}

/*not working*/
#option-sector{
    width:96%; 
    border-radius:5px; 
    color:#9b9b9b;   
    font-size: 20pt;
    margin-left: 2.5px;

}

/* tab*/
.tab-panels ul li{
    list-style-type: none;
    display: inline-block;
    padding: 3px 10px;
    color: black;
    font-weight: 200;
    cursor: pointer;
    border-radius: 10px 10px;
}

.tab-panels ul li:hover{
    color:black;
    background: #f2f2f2;
}
.tab-panels ul li.active{   
    color:black;
    border:1px solid black;
}

.tab-panels .project{
        display:none;
        padding:30px;
        border-left: 0 0 10px 10px;
}
.tab-panels .project.active{
    display:block;
}

